# streamlit-mermaid

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: mermaid_example.py
streamlit_mermaid/: __init__.py
streamlit_mermaid/frontend/: package-lock.json  package.json
streamlit_mermaid/frontend/public/: index.html
streamlit_mermaid/frontend/src/: MermaidViewer.tsx  index.tsx  style.module.css
