[tool.poetry]
name = "streamlit-mermaid"
version = "0.3.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = ["**/node_modules/**/*", "**/frontend/src/**/*", "**/.yarn/**/*"]
include = ["**/frontend/build/**/*"]
packages = [{include = "streamlit_mermaid"}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.0.0"
altair = "<5"
setuptools = "^75.6.0"


[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
